--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/appstore.png"
+  min_sdk_android: 21
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -94,6 +100,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - svg/
+     - assets/appstore.png
 
 
 
