--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.1 <4.0.0'
+  sdk: '>=3.0.2 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,7 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_local_notifications: ^14.0.0
+
   autocomplete_textfield: ^2.0.1
+
   google_maps_flutter: ^2.2.3
   tutorial_coach_mark: ^1.2.8
   freezed_annotation: ^2.2.0
@@ -59,7 +61,7 @@ dependencies:
   xml2json: ^6.0.0
   latlong2: ^0.9.0
   timezone: ^0.9.1
-  chopper: ^6.1.2
+  chopper: ^6.1.3
   gsheets: ^0.4.2
   intl: ^0.18.0
   get: ^4.6.5
@@ -68,21 +70,23 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.13.1"
+#  flutter_launcher_icons: "^0.13.1"
+#
+#
+#flutter_launcher_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  image_path: "assets/appstore.png"
+#  min_sdk_android: 21
 
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/appstore.png"
-  min_sdk_android: 21
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.4.4
   freezed: ^2.3.4
+  build_runner: ^2.4.4
   json_serializable: ^6.7.0
   chopper_generator: ^6.0.1
 
@@ -101,8 +105,6 @@ flutter:
   assets:
      - svg/
      - assets/appstore.png
-
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
